GNOME Bugzilla – Bug 752900
Return value error in tracker_file_notifier_get_file_type
Last modified: 2015-07-31 15:06:27 UTC
These errors showed when compiling tracker with clang: tracker-file-notifier.c:1770:2: error: non-void function 'tracker_file_notifier_get_file_type' should return a value [-Wreturn-type] g_return_if_fail (TRACKER_IS_FILE_NOTIFIER (notifier)); ^ /home/lantw44/gnome/devinstall/include/glib-2.0/glib/gmessages.h:379:3: note: expanded from macro 'g_return_if_fail' return; \ ^ tracker-file-notifier.c:1771:2: error: non-void function 'tracker_file_notifier_get_file_type' should return a value [-Wreturn-type] g_return_if_fail (G_IS_FILE (file)); ^ /home/lantw44/gnome/devinstall/include/glib-2.0/glib/gmessages.h:379:3: note: expanded from macro 'g_return_if_fail' return; \ ^ 1 warning and 2 errors generated.
Created attachment 308182 [details] [review] build: Fix return value error for tracker_file_notifier_get_file_type
Comment on attachment 308182 [details] [review] build: Fix return value error for tracker_file_notifier_get_file_type Patch looks good, thanks for noticing! :)
Attachment 308182 [details] pushed as 789462f - build: Fix return value error for tracker_file_notifier_get_file_type