build: Fix return value error for tracker_file_notifier_get_file_type

https://bugzilla.gnome.org/show_bug.cgi?id=752900